# Sagan_proposal_generator

./: .gitignore  prompts.txt
ingest_data/: pyproject.toml
output/: output.aux  output.md  output.tex
sagan_workflow/: pyproject.toml
sagan_workflow/spaider_agent_temp/: app.py  graph.py  schemas.py
sagan_workflow/spaider_agent_temp/nodes_and_conditional_edges/: nodes.py
sagan_workflow/spaider_agent_temp/prompts/: prompts.py
sagan_workflow/spaider_agent_temp/utils/: latextopdf.py
sagan_workflow_refiner/: logs.txt  pyproject.toml  user_prompts.txt
sagan_workflow_refiner/spaider_agent_temp/: app.py  graph.py  schemas.py
sagan_workflow_refiner/spaider_agent_temp/nodes_and_conditional_edges/: conditional_edges.py  nodes.py
sagan_workflow_refiner/spaider_agent_temp/prompts/: prompts.py
sagan_workflow_refiner/spaider_agent_temp/utils/: mdtopdf.py
